# ai-tools

./: README.md  pyproject.toml
.github/workflows/: ruff.yml
mcp/dir-worklog/: MCP-DESIGN.md  README.md  pyproject.toml
mcp/dir-worklog/tests/: __init__.py  test_dates.py  test_mcp.py  test_scan.py  test_service.py
mcp/dir-worklog/tools/: worklog_last_workday.json  worklog_workspace_activity.json  worklog_workspace_today.json
mcp/dir-worklog/worklog/: __init__.py  cli.py  config.py  dates.py  mcp_server.py  output.py  scan.py  service.py
mcp/git-stats/: MCP-DESIGN.md  README.md  pyproject.toml
mcp/git-stats/git_stats/: __init__.py  categories.py  cli.py  cli_util.py  config.py  dates.py  done_github.py  done_gitlab.py  done_group.py  done_service.py  github.py  gitlab.py  models.py  output.py  server.py  service.py
mcp/git-stats/tests/: __init__.py  test_done.py  test_done_group.py  test_github_authored.py  test_gitlab_review.py  test_service.py  test_units.py
mcp/git-worktrees/: README.md  pyproject.toml
mcp/git-worktrees/git_worktrees_mcp/: __init__.py  cli.py  config.py  operations.py  repos.ini  server.py
mcp/rh-jira-cli/: .gitignore  README.md  pyproject.toml
mcp/rh-jira-cli/jira_cli/: __init__.py  __main__.py  api.py  cli.py  config.py  custom_fields.py  interactive.py  jql.py  mcp_server.py  service.py  sprint_cache.py  sprint_listing.py
mcp/rh-jira-cli/jira_cli/commands/: agenda.py  backlog.py  edit_issue.py  field_map.py  issue_link.py  list_issues.py  move_issue.py  new_issue.py  search_issues.py  show_issue.py
mcp/rh-jira-cli/tests/: test_backlog_jql.py  test_issue_link.py  test_jql.py  test_move_issue.py  test_search_jql.py
skills/about-idmci/: SKILL.md  reference.md
skills/agenda/: SKILL.md
skills/analyze-jenkins-failure/: SKILL.md
skills/backlog/: SKILL.md
skills/create-idmci-metadata/: SKILL.md  reference.md
skills/create-rheltest-testcase/: SKILL.md  reference.md
skills/done/: SKILL.md
skills/jira-cli-mcp/: SKILL.md
skills/review-changes/: SKILL.md
skills/run-python-static-code-analysis/: SKILL.md
skills/run-sssd-tests-idmci/: SKILL.md
skills/write-sssd-system-tests/: SKILL.md
skills/writing-ansible/: SKILL.md
tools/: README.md  pyproject.toml
tools/ai_tools/: __init__.py  beetlejuice.py  check_ansible.py  clean_twd.py  dump_polarion_testcase.py  import_jira_testcase.py  jenkins_artifacts.py  scan_python_testcase.py
tools/tests/: test_beetlejuice.py  test_check_ansible.py  test_clean_twd.py  test_dump_polarion_testcase.py  test_import_jira_testcase.py  test_jenkins_artifacts.py  test_scan_python_testcase.py
tools/tests/fixtures/beetlejuice/: ad-sample.xml  bash-sample.xml  mh-sample.xml
