[project]
name = "ai-tools"
version = "0.1.0"
description = "CLI helpers from the ai-tools repository"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
clean-twd = "ai_tools.clean_twd:main"
pull-jenkins-artifacts = "ai_tools.jenkins_artifacts:main"
check-ansible = "ai_tools.check_ansible:main"
dump-polarion-testcase = "ai_tools.dump_polarion_testcase:main"
import-jira-testcase = "ai_tools.import_jira_testcase:main"
scan-python-testcase = "ai_tools.scan_python_testcase:main"

[project.optional-dependencies]
polarion-yaml = ["PyYAML>=6"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_tools*"]
