[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "worklog"
version = "0.1.0"
description = "CLI and MCP: last workday git workspace activity for daily agendas"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.1.0", "pytest>=7.0"]
mcp = ["mcp>=1.0"]

[project.scripts]
worklog = "worklog.cli:main"
worklog-mcp = "worklog.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["worklog*"]

[tool.ruff]
line-length = 100
target-version = "py310"
