[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "git-stats"
version = "0.1.0"
description = "CLI and MCP: GitHub/GitLab PR/MR review and authored queues"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["ruff>=0.1.0", "pytest>=7.0", "flake8>=6.0"]

[project.scripts]
git-stats = "git_stats.cli:main"
git-stats-mcp = "git_stats.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["git_stats*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
